--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,9 @@
       "paths": {
         "components/*": [
           "./src/components/*"
+        ],
+        "hooks/*": [
+          "./src/hooks/*"
         ]
       },
     },
