--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,14 +1,10 @@
 {
-    "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {
-        "components/*": [
-          "./src/components/*"
-        ],
-        "hooks/*": [
-          "./src/hooks/*"
-        ]
-      },
-    },
-  }
-  
+	"compilerOptions": {
+		"baseUrl": ".",
+		"paths": {
+			"components/*": ["./src/components/*"],
+			"hooks/*": ["./src/hooks/*"],
+			"services/*": ["./src/services/*"]
+		}
+	}
+}
