--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,8 @@
 		"paths": {
 			"components/*": ["./src/components/*"],
 			"hooks/*": ["./src/hooks/*"],
-			"services/*": ["./src/services/*"]
+			"services/*": ["./src/services/*"],
+			"contexts/*": ["./src/contexts/*"]
 		}
 	}
 }
