--- a/exercises/module7/routed-anecdotes/package.json
+++ b/exercises/module7/routed-anecdotes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "5.1",
+  "name": "routed-anecdotes",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,19 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "mongoose": "^8.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "uuid": "^9.0.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8"
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "vite": "^4.4.5"
   }
 }
